<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PindaibaMainActivityFragment"
    android:orientation="vertical">


    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbNomeGrupo"/>

    <EditText
        android:id="@+id/editNomeGrupo"
        android:text="Grupo A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbDescricaoGrupo"/>

    <EditText
        android:id="@+id/editDescricaoGrupo"
        android:text="Descricao Grupo A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSalvar"/>
    <Button
        android:id="@+id/btListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListar"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista Grupo"/>

    <ListView
        android:layout_marginTop="15dp"
        android:id="@+id/listViewGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btListarTipoUnidadeMedida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListarTipoUnidadeMedida"/>
    <Button
        android:id="@+id/btListarTipoItemMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListarTipoItemMenu"/>
    <Button
        android:id="@+id/btListarTipoEstabelecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListarTipoEstabelecimento"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista Generica"/>

    <ListView
        android:layout_marginTop="15dp"
        android:id="@+id/listViewGeneric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista Grupo"/>

</LinearLayout>
</ScrollView>